[package]
name = "c-ste"
version = "0.1.0"
edition = "2024"

[dependencies]
ark-poly = { version = "0.5.0" }
ark-ff = { version = "0.5.0" }
ark-ec = { version = "0.5.0" }
ark-std = { version = "0.5.0", features = ["print-trace"] }
ark-serialize = { version = "0.5.0" }
ark-bls12-381 = { version = "0.5.0" }

rand = { version = "0.8" }
sha2 = { version = "0.10.9" }

[dev-dependencies]
criterion = { version = "0.8" }

# [[bench]]
# name = "epoch"
# harness = false

[[bench]]
name = "hints"
harness = false